--- a/src/styles/Communities/CommunityHeader.module.css
+++ b/src/styles/Communities/CommunityHeader.module.css
@@ -20,6 +20,7 @@
 }
 
 .infoContainer img {
+  background-color: var(--color-background-one);
   border-radius: 100%;
   border: 4px solid var(--color-background-one);
   display: inline-block;
