--- a/src/styles/userAuthModal/UserAuthModal.module.css
+++ b/src/styles/userAuthModal/UserAuthModal.module.css
@@ -8,7 +8,7 @@
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  z-index: 3;
+  z-index: 11;
   overflow: hidden;
   display: flex;
   flex-direction: column;
@@ -23,7 +23,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 2;
+  z-index: 10;
 }
 
 .closeBtn {
@@ -52,5 +52,15 @@
 @media (max-width: 420px) {
   .root {
     width: 350px;
+  }
+}
+
+@media (max-height: 750px) {
+  .root {
+    height: 500px;
+  }
+
+  .logo {
+    display: none;
   }
 }
