--- a/src/styles/comments/UserComments.module.css
+++ b/src/styles/comments/UserComments.module.css
@@ -84,6 +84,10 @@
   font-weight: 700;
 }
 
+.commentInfoInner p {
+  margin-left: 3px;
+}
+
 .commentBody {
   padding: 2px 0;
   color: var(--color-font-one);
