--- a/src/styles/header/Header.module.css
+++ b/src/styles/header/Header.module.css
@@ -5,9 +5,11 @@
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid var(--color-border-one);
-  position: sticky;
+  position: fixed;
+  width: 100%;
+  box-sizing: border-box;
   top: 0;
-  z-index: 1;
+  z-index: 2;
 }
 
 .leftSide {
