--- a/src/styles/header/Notifications.module.css
+++ b/src/styles/header/Notifications.module.css
@@ -1,15 +1,20 @@
 .root {
-  position: fixed;
-  right: 180px;
-  top: 50px;
+  position: relative;
+}
+
+.notifications {
   width: 350px;
   background-color: var(--color-background-one);
   border: 1px solid var(--color-border-one);
   border-radius: 4px;
-  overflow-y: auto;
-  max-height: 80%;
-  z-index: 1;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  position: absolute;
+  right: -68px;
+  top: 42px;
+  max-height: 80vh;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 .heading {
@@ -131,8 +136,8 @@
   user-select: none;
 }
 
-@media (max-width: 1080px) {
-  .root {
-    right: 3%;
+@media (max-width: 420px) {
+  .notifications {
+    width: 320px;
   }
 }
