--- a/src/styles/header/UserNav.module.css
+++ b/src/styles/header/UserNav.module.css
@@ -1,11 +1,15 @@
 .root {
+  position: relative;
+}
+
+.userNavBtn {
   background-color: transparent;
   border: 1px solid transparent;
   border-radius: 4px;
   padding: 5px 0;
 }
-.root:hover,
-.root:focus {
+.userNavBtn:hover,
+.userNavBtn:focus {
   border-color: var(--color-border-one);
 }
 
@@ -35,17 +39,16 @@
 }
 
 .userMenu {
-  position: fixed;
-  right: 20px;
-  top: 50px;
   width: 252px;
   background-color: var(--color-background-one);
   border: 1px solid var(--color-border-one);
   border-radius: 4px;
   padding: 0.5rem 0;
   overflow-y: auto;
-  max-height: 80%;
-  z-index: 1;
+  position: absolute;
+  right: 0;
+  top: 48px;
+  max-height: 80vh;
 }
 
 .sectionTitle {
