--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,6 +3,7 @@
 :root {
   font-size: 12px;
   font-family: "Noto Sans", sans-serif;
+  text-size-adjust: 100%;
 
   /* these colors do not change when toggling the theme */
   --color-main: #ff4500;
@@ -21,6 +22,11 @@
 * {
   margin: 0;
   padding: 0;
+}
+
+body {
+  background-color: var(--canvas);
+  padding-top: 49px;
 }
 
 h1,
@@ -74,6 +80,13 @@ label {
   font-family: "IBM Plex Sans", sans-serif;
   font-size: 14px;
   color: var(--color-font-one);
+}
+
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+  display: none;
 }
 
 @keyframes spin {
