--- a/src/styles/userProfile/UserInfo.module.css
+++ b/src/styles/userProfile/UserInfo.module.css
@@ -47,6 +47,7 @@
   top: 12px;
   transform: translateX(-50%);
   border-radius: 20px;
+  background-color: var(--color-background-one);
 }
 
 .userDisplayName {
