--- a/src/styles/shared/SharedPostsContainer.module.css
+++ b/src/styles/shared/SharedPostsContainer.module.css
@@ -2,13 +2,13 @@
   width: 100%;
   max-width: 640px;
   min-width: 355px;
+  padding-bottom: 50px;
 }
 
 .loadingPostsSpinner {
   display: block;
   margin: auto;
-  margin-top: 20px;
-  font-size: 4em;
+  font-size: 50px;
   color: var(--color-main);
   animation: var(--spinner-animation);
 }
@@ -18,4 +18,10 @@
   font-weight: 600;
   font-size: 16px;
   color: var(--color-utility-two);
+}
+
+@media (max-width: 450px) {
+  .noMorePosts {
+    margin-bottom: 10px;
+  }
 }
